--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Team 24: Node Module Visualization</a>
+          <a class="navbar-brand" href="#">Viz 5: NODEpendency</a>
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -56,12 +56,16 @@
       <div class="container">
         <h1>Hello!</h1>
         <p>Please provide the GitHub Node Module project link you want to analyze.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <div class="form-group">
+          <input class="form-control" type="text" placeholder="Yup. Just the link :)">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Analyze dependency!</button>
+        <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
+    <!-- <div class="container">
       <div class="row">
         <div class="col-md-4">
           <h2>Heading</h2>
@@ -78,13 +82,13 @@
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-      </div>
+      </div> -->
 
-      <hr>
+      <!-- <hr>
 
       <footer>
         <p>&copy; Company 2015</p>
-      </footer>
+      </footer> -->
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
